<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~   Licensed to Muhammad Hamadto
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   See the NOTICE file distributed with this work for additional information regarding copyright ownership.
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.coffeebeans</groupId>
    <artifactId>spring-native-aws-lambda</artifactId>
    <version>${revision}</version>
  </parent>

  <artifactId>spring-native-aws-service</artifactId>
  <name>${project.artifactId}</name>
  <packaging>jar</packaging>
  <description>Demo project for Spring cloud function with graalvm native image</description>

  <developers>
    <developer>
      <id>matto</id>
      <name>Muhammad Hamadto</name>
      <url>https://www.linkedin.com/in/muhamadto/</url>
    </developer>
  </developers>

  <properties>
    <spring-cloud.version>2023.0.0</spring-cloud.version>
    <repackage.classifier/>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>

    <!-- AWS LAMBDA -->
    <dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-lambda-java-events</artifactId>
    </dependency>
    <dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-lambda-java-core</artifactId>
    </dependency>
    <dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-lambda-java-serialization</artifactId>
    </dependency>
    <dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-lambda-java-log4j2</artifactId>
    </dependency>
    <!-- AWS LAMBDA ENDS -->

    <!-- SPRING CLOUD -->
    <dependency>
      <groupId>org.springframework.cloud</groupId>
      <artifactId>spring-cloud-function-adapter-aws</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.cloud</groupId>
      <artifactId>spring-cloud-starter-function-web</artifactId>
    </dependency>
    <!-- SPRING CLOUD ENDS -->

    <!-- SPRING BOOT -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <dependency>
      <groupId>io.awspring.cloud</groupId>
      <artifactId>spring-cloud-aws-starter-dynamodb</artifactId>
    </dependency>
    <!-- SPRING BOOT ENDS -->

    <!-- UTILITIES -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>
    <!-- UTILITIES ENDS -->

    <!-- TEST -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.junit.vintage</groupId>
          <artifactId>junit-vintage-engine</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- TEST ENDS -->

  </dependencies>

  <build>
    <finalName>${project.artifactId}</finalName>
  </build>

  <profiles>
    <profile>
      <id>native</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>spring-boot-build-info</id>
                <goals>
                  <goal>build-info</goal>
                </goals>
                <phase>generate-resources</phase>
              </execution>
              <execution>
                <id>process-aot</id>
                <goals>
                  <goal>process-aot</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <configuration>
              <mainClass>com.coffeebeans.springnativeawslambda.Application</mainClass>
              <buildArgs combine.children="append">
                <buildArg>--verbose</buildArg>
                <buildArg>--no-fallback</buildArg>
                <buildArg>--enable-preview</buildArg>
                <buildArg>--strict-image-heap</buildArg>
                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
              </buildArgs>
              <agent>
                <enabled>true</enabled>
              </agent>
            </configuration>
          </plugin>
          <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <executions>
              <execution>
                <id>native-zip</id>
                <phase>package</phase>
                <goals>
                  <goal>single</goal>
                </goals>
                <inherited>false</inherited>
              </execution>
            </executions>
            <configuration>
              <descriptors>
                <descriptor>src/assembly/native.xml</descriptor>
              </descriptors>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>